--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/node": "^16.4.8",
+    "@types/typescript": "^2.0.0",
+    "ts-node": "^10.1.0",
     "typescript": "^4.3.5"
   }
 }
