--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "webpack -w"
   },
   "keywords": [],
   "author": "",
@@ -12,7 +13,10 @@
   "devDependencies": {
     "@types/node": "^16.4.8",
     "@types/typescript": "^2.0.0",
+    "ts-loader": "^9.2.5",
     "ts-node": "^10.1.0",
-    "typescript": "^4.3.5"
+    "typescript": "^4.3.5",
+    "webpack": "^5.48.0",
+    "webpack-cli": "^4.7.2"
   }
 }
