--- a/package.json
+++ b/package.json
@@ -12,12 +12,16 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@types/node": "^16.4.8",
+    "@types/node": "^16.4.13",
     "@types/typescript": "^2.0.0",
     "ts-loader": "^9.2.5",
     "ts-node": "^10.1.0",
     "typescript": "^4.3.5",
     "webpack": "^5.48.0",
     "webpack-cli": "^4.7.2"
+  },
+  "dependencies": {
+    "@types/validator": "^13.6.3",
+    "validator": "^13.6.0"
   }
 }
